deploy/retrieveUnpackaged/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>AM_Contact_Notes__c</fullName>
        <inlineHelpText>Contact note information entered by the Account Manager.</inlineHelpText>
        <label>AM Contact Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Acct_Number__c</fullName>
        <formula>Account.CORE_Account_number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Acct Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CA_Lead_Score__c</fullName>
        <inlineHelpText>Fed from Marketo for Cloud Apps Lead Score</inlineHelpText>
        <label>CA Lead Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CH_Lead_Score__c</fullName>
        <inlineHelpText>Fed from Marketo for Cloud Hosting Lead Score</inlineHelpText>
        <label>CH Lead Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contact_ID__c</fullName>
        <displayFormat>{0}</displayFormat>
        <label>Contact ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Contact_Production_Id__c</fullName>
        <description>Used for CI integration</description>
        <inlineHelpText>Used for CI integration</inlineHelpText>
        <label>Contact Production Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Profile__c</fullName>
        <label>Contact Profile</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Title__c</fullName>
        <label>Contact Title</label>
        <picklist>
            <picklistValues>
                <fullName>Chief Executive Officer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chief Financial Officer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consultant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Director/CFO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT Director/Manager/CIO/CTO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Managing Director/CEO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing Director/Manager/CMO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>President</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vice-President</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>System Admin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Disc_Profile__c</fullName>
        <label>DISC Profile</label>
        <picklist>
            <picklistValues>
                <fullName>Dominance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Influence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Steadiness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conscientiousness</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Do_Not_Mail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Mail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Eloqua_Rating__c</fullName>
        <inlineHelpText>Rating given to the Contact based on their score.</inlineHelpText>
        <label>Eloqua Rating</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Eloqua_Score__c</fullName>
        <inlineHelpText>Score given to the contact by Eloqua dependent on their Activity</inlineHelpText>
        <label>Eloqua Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Eloqua_Sync__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Contact that participates in Eloqua&apos;s nightly sync.</inlineHelpText>
        <label>Eloqua Sync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email2__c</fullName>
        <label>Email2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email3__c</fullName>
        <label>Email3</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email4__c</fullName>
        <label>Email4</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_Opt_In__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to track contacts that want to receive emails from Rackspace.</description>
        <inlineHelpText>Used to track contacts that want to receive emails from Rackspace.</inlineHelpText>
        <label>Email Opt-In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Events__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Events</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Field1__c</fullName>
        <description>Used for Marketo integration.</description>
        <inlineHelpText>Used for Marketo integration.</inlineHelpText>
        <label># of Chats</label>
        <picklist>
            <picklistValues>
                <fullName>&gt;=4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2-3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Hobbies__c</fullName>
        <label>Hobbies</label>
        <picklist>
            <picklistValues>
                <fullName>Amateur science related</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Animal-related</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arts and Crafts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baseball</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Basketball</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chemistry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Collecting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computer-related</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cooking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DIY (Do It Yourself)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electronics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Film-making</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fishing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Football</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Games</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Geofiction, including model nations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Golf</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Historical reenactment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hockey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Homebrewing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hunting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interactive fiction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internet-based hobbies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inventing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Literature</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Machining</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Model (scale model) building</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Music</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Observation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outdoor nature activities</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>HooversId__c</fullName>
        <label>HooversId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Individual_Id__c</fullName>
        <label>Individual Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>IsPartner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Partner Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KC_URL_Visit_Duration__c</fullName>
        <description>Used for Marketo integration.</description>
        <inlineHelpText>Used for Marketo integration.</inlineHelpText>
        <label>KC URL Visit Duration</label>
        <picklist>
            <picklistValues>
                <fullName>&lt;=1 minute</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&gt;=4 minutes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2-3 minutes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Language_Preference__c</fullName>
        <label>Language Preference</label>
        <picklist>
            <picklistValues>
                <fullName>English</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Danish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dutch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>French</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>German</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Italian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Norwegian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spanish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Swedish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indian</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Last_Chat_Date_Range__c</fullName>
        <description>Used for Marketo integration.</description>
        <inlineHelpText>Used for Marketo integration.</inlineHelpText>
        <label>Last Chat Date Range</label>
        <picklist>
            <picklistValues>
                <fullName>&lt;=30 days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&gt;=60 days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>31-59 days</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Latest_Detractor_Comment_Hidden__c</fullName>
        <label>Latest Detractor Comment Hidden</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Latest_Passive_Comment_Hidden__c</fullName>
        <label>Latest Passive Comment Hidden</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Latest_Promoter_Comment_Hidden__c</fullName>
        <label>Latest Promoter Comment Hidden</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Latest_Recommendation_Hidden__c</fullName>
        <label>Latest Recommendation Hidden</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Latest_Recommendation__c</fullName>
        <formula>value(left( Latest_Recommendation_Hidden__c ,2))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Latest Recommendation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Latest_Survey_Comments__c</fullName>
        <formula>if( Latest_Promoter_Comment_Hidden__c =&quot;&quot;, (if(Latest_Detractor_Comment_Hidden__c=&quot;&quot;, Latest_Passive_Comment_Hidden__c 
,Latest_Detractor_Comment_Hidden__c)), Latest_Promoter_Comment_Hidden__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Latest Survey Comments</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MH_Lead_Score__c</fullName>
        <inlineHelpText>Fed from Marketo for Managed Hosting Lead Score</inlineHelpText>
        <label>MH Lead Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Marketo_Buying_Cycle__c</fullName>
        <description>Used for Marketo integration.</description>
        <inlineHelpText>Used for Marketo integration.</inlineHelpText>
        <label>Marketo Buying Cycle</label>
        <picklist>
            <picklistValues>
                <fullName>CA_Early_Prospect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA_Middle_Prospect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA_SalesReady_Prospect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CH_Early_Prospect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CH_Middle_Prospect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CH_SalesReady_Prospect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MH_Early_Prospect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MH_Middle_Prospect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MH_SalesReady_Prospect</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Marketo_Lead_Score_Range__c</fullName>
        <description>Used for Marketo integration.</description>
        <inlineHelpText>Used for Marketo integration.</inlineHelpText>
        <label>Marketo Lead Score Range</label>
        <picklist>
            <picklistValues>
                <fullName>&gt;=100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0-50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>51-99</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Middle_Name__c</fullName>
        <description>Middle Name required for Core Integration</description>
        <label>Middle Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notification_of_published_whitepapers__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is populated by the website submission.</description>
        <inlineHelpText>This is populated by the website submission.</inlineHelpText>
        <label>Notification of published whitepapers?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notification_of_scheduled_webinars__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is populated by the website submission.</description>
        <inlineHelpText>This is populated by the website submission.</inlineHelpText>
        <label>Notification of scheduled webinars?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Partner_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Partner Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Persona__c</fullName>
        <label>Persona</label>
        <picklist>
            <picklistValues>
                <fullName>IT Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technologist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Developer/Producer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account Team</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Phone2__c</fullName>
        <label>Phone2</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Phone3__c</fullName>
        <label>Phone3</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Phone4__c</fullName>
        <label>Phone4</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Product_Updates__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Product Updates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Promotions__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Promotions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <inlineHelpText>Field used by Marketing to rate the contact on the level of their activity.</inlineHelpText>
        <label>Rating</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Survey_Black_List__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Survey Black List</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ticket_Notification__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ticket Notification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Time_Zone__c</fullName>
        <description>The time zone the contact wishes to be contacted in.</description>
        <inlineHelpText>The time zone the contact wishes to be contacted in.</inlineHelpText>
        <label>Time Zone</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>is1__Chat_ID__c</fullName>
        <externalId>true</externalId>
        <label>Chat ID</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>is1__Mail_ID__c</fullName>
        <externalId>true</externalId>
        <label>Mail ID</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>mkto2__Inferred_City__c</fullName>
        <label>Inferred City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Inferred_Company__c</fullName>
        <label>Inferred Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Inferred_Country__c</fullName>
        <label>Inferred Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Inferred_Metropolitan_Area__c</fullName>
        <label>Inferred Metropolitan Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Inferred_Phone_Area_Code__c</fullName>
        <label>Inferred Phone Area Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Inferred_Postal_Code__c</fullName>
        <label>Inferred Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Inferred_State_Region__c</fullName>
        <label>Inferred State Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Lead_Score__c</fullName>
        <label>Lead Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mkto2__Original_Referrer__c</fullName>
        <label>Original Referrer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Original_Search_Engine__c</fullName>
        <label>Original Search Engine</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Original_Search_Phrase__c</fullName>
        <label>Original Search Phrase</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Original_Source_Info__c</fullName>
        <defaultValue>&quot;Contact&quot;</defaultValue>
        <label>Original Source Info</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>mkto2__Original_Source_Type__c</fullName>
        <defaultValue>&quot;salesforce.com&quot;</defaultValue>
        <label>Original Source Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__Last_Interesting_Moment_Date__c</fullName>
        <label>Last Interesting Moment Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>mkto_si__Last_Interesting_Moment_Desc__c</fullName>
        <label>Last Interesting Moment Desc</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>mkto_si__Last_Interesting_Moment_Source__c</fullName>
        <label>Last Interesting Moment Source</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__Last_Interesting_Moment_Type__c</fullName>
        <label>Last Interesting Moment Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__Last_Interesting_Moment__c</fullName>
        <formula>IF(!ISNULL(mkto_si__Last_Interesting_Moment_Date__c), 
HYPERLINK(&quot;/apex/mkto_si__Contact_Full_List?activeTab=interestingMomentsTab&amp;id=&quot; &amp; Id, mkto_si__Last_Interesting_Moment_Type__c &amp; &quot; -- &quot; &amp; mkto_si__Last_Interesting_Moment_Desc__c ), &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Interesting Moment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__Priority__c</fullName>
        <label>Priority</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mkto_si__Relative_Score_Value__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Relative Score Value</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mkto_si__Relative_Score__c</fullName>
        <formula>CASE( MIN(MAX(mkto_si__Relative_Score_Value__c, 0), 3),
    0, IMAGE(&quot;https://app.marketo.com/images/icons/star0.png&quot;,&quot;0&quot;),
    1, IMAGE(&quot;https://app.marketo.com/images/icons/star1.png&quot;,&quot;1&quot;),
    2, IMAGE(&quot;https://app.marketo.com/images/icons/star2.png&quot;,&quot;2&quot;),
    3, IMAGE(&quot;https://app.marketo.com/images/icons/star3.png&quot;,&quot;3&quot;),
    &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Relative Score</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__Urgency_Value__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Urgency Value</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mkto_si__Urgency__c</fullName>
        <formula>CASE( MIN(MAX(mkto_si__Urgency_Value__c, 0),3),
    0, IMAGE(&quot;https://app.marketo.com/images/icons/fire0.png&quot;,&quot;0&quot;),
    1, IMAGE(&quot;https://app.marketo.com/images/icons/fire1.png&quot;,&quot;1&quot;),
    2, IMAGE(&quot;https://app.marketo.com/images/icons/fire2.png&quot;,&quot;2&quot;),
    3, IMAGE(&quot;https://app.marketo.com/images/icons/fire3.png&quot;,&quot;3&quot;),
    &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Urgency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__View_in_Marketo__c</fullName>
        <formula>HYPERLINK (&quot;/apex/mkto_si__Marketo_Lead_Detail?objType=Contact&amp;objId=&quot; &amp; Id, IMAGE(&quot;https://app.marketo.com/images/icons16/marketo16.png&quot;,&quot;View in Marketo&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View in Marketo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>of_Return_Website_Between__c</fullName>
        <description>Used for Marketo integration.</description>
        <inlineHelpText>Used for Marketo integration.</inlineHelpText>
        <label># of Return Website Between</label>
        <picklist>
            <picklistValues>
                <fullName>&gt;=8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3-7</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>of_Viewed_Web_Pages__c</fullName>
        <description>Used for Marketo integration.</description>
        <inlineHelpText>Used for Marketo integration.</inlineHelpText>
        <label># of Viewed Web Pages</label>
        <picklist>
            <picklistValues>
                <fullName>&lt;=2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&gt;=6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3-5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>Adrianna_s_SoCal_Partner_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>Adrianna&apos;s SoCal Partner Contacts</label>
        <sharedTo>
            <group>All Channel Managers</group>
            <role>US Vertical Channel</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.BIRTHDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>Chris_Spears_NY_NJ</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>Chris Spears - NY/NJ</label>
        <sharedTo>
            <role>US Vertical Channel</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Contacts_on_Open_Opps_Aric</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>Contacts on Open Opps- Aric</label>
        <sharedTo>
            <roleAndSubordinates>US SMB New SA 1</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Dell_Partner_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>Dell Partner Contacts</label>
        <sharedTo>
            <role>US Strategic Channel</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Erika_s_Lost_Opp_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>Erika&apos;s Lost Opp Contacts</label>
        <sharedTo>
            <role>US SMB New SA 3</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Erin_s_Contacts_Onye_s_Lost_Opps</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>Erin&apos;s Contacts (Onye&apos;s Lost Opps)</label>
        <sharedTo>
            <roleAndSubordinates>US SMB New SA 1</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Erin_s_Open_Opps</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>Erin&apos;s Open Opps</label>
        <sharedTo>
            <roleAndSubordinates>US SMB New SA 1</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Jason_King_Lost_Lead_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>Jason King- Lost Lead Contacts</label>
        <sharedTo>
            <roleAndSubordinates>US SMB New SA 3</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Kris_Schwartz_no_contact_2_weeks_Dec08</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>Kris Schwartz- no contact 2 weeks- Dec08</label>
    </listViews>
</CustomObject>